k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: clarence-lab03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/clarencesns/frontend:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: "/"
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/"
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
