k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: clarence-lab03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/clarencesns/backend:v19
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: volume-file
              mountPath: /app/volume
            - name: pvc-storage
              mountPath: /app/pvc # 挂载 PVC 到 /app/pvc 目录
      volumes:
        - name: volume-file
          configMap:
            name: backend-volume-config
            items:
              - key: volume.txt
                path: volume.txt
        - name: pvc-storage
          persistentVolumeClaim:
            claimName: backend-pvc # 使用我们创建的 PVC
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: clarence-lab03
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
# ==============================
# Frontend Deployment + Service
# ==============================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: clarence-lab03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/clarencesns/frontend:v21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: "/"
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/"
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: clarence-lab03
spec:
  selector:
    app: frontend
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
