k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: clarence-lab03
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 3000
  type: ClusterIP
