k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clarence-ingress
  namespace: clarence
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - host: clarence.platform88.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service   # ✅ 改成正確名稱
                port:
                  number: 3001           # ✅ 與 Service port 一致
